--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,19 +5,21 @@ FetchContent_Declare(gtest
 )
 # configure build of googletest
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
+set(BUILD_GMOCK ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(gtest)
 
+# Making an executable
 add_executable(
     unit_tests
-    example_add.cpp
-    example_subtract.cpp
-    )
+    test_example.cpp
+    test_hello.cpp
+  )
 
 target_link_libraries(unit_tests
   PRIVATE
     example
     gtest_main
+    gmock_main
   )
 
 # automatic discovery of unit tests
