fix lint include warning

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -2,4 +2,4 @@ root=./lexer
 filter=-legal/copyright
 filter=-whitespace/line_length,-whitespace/braces,-whitespace/indent,-whitespace/comments
 filter=-readability/namespace,-readability/namespace
-filter=-build/include_subdir,-build/include_order
+filter=-build/include_order
