--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,5 +1,6 @@
 root=./lexer
 filter=-legal/copyright
-filter=-whitespace/line_length,-whitespace/braces,-whitespace/indent,-whitespace/comments
-filter=-readability/namespace,-readability/namespace
-filter=-build/include_order
+filter=-whitespace/line_length,-whitespace/braces,-whitespace/indent,-whitespace/comments,-whitespace/newline
+filter=-readability/namespace,-readability/namespace,-readability/braces
+filter=-build/include_order,-build/namespaces
+filter=-runtime/references
