--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,6 +1,6 @@
 root=./lexer
 filter=-legal/copyright
 filter=-whitespace/line_length,-whitespace/braces,-whitespace/indent,-whitespace/comments,-whitespace/newline
-filter=-readability/namespace,-readability/namespace,-readability/braces
+filter=-readability/namespace,-readability/namespace,-readability/braces,-readability/todo
 filter=-build/include_order,-build/namespaces
 filter=-runtime/references
